manifests/cluster-addons/rustfs/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs
  namespace: rustfs
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: int-bakseter-net
      namespace: tailscale

  hostnames:
    - rustfs.int.bakseter.net

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: rustfs-svc
          port: 9001
