manifests/cluster-addons/rustfs/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rustfs
  namespace: rustfs
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: rustfs

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: compactor
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: distributor
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: index-gateway
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: ingester
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: query-frontend
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: query-scheduler
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: querier
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/instance: loki
            app.kubernetes.io/name: create-s3-buckets
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/instance: tempo
            app.kubernetes.io/name: create-s3-buckets
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/instance: tempo
            app.kubernetes.io/name: tempo
      toPorts:
        - ports:
            - port: '9000'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-int
      toPorts:
        - ports:
            - port: '9001'
              protocol: TCP
